blue-green-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
spec:
  type: NodePort
  selector:
    app: trivial-go-web-app
  ports:
      - nodePort: 30000
        protocol: TCP
        port: 8080
