blue-green-app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trivial-go-web-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /active
          pathType: Prefix
          backend:
            service:
              name: rollout-bluegreen-active
              port:
                number: 8080
        - path: /preview
          pathType: Prefix
          backend:
            service:
              name: rollout-bluegreen-preview
              port:
                number: 8080
